--- a/index.html
+++ b/index.html
@@ -690,6 +690,42 @@
             gap: 20px;
             padding: 20px;
         }
+
+        /* 移动端样式优化 */
+        @media screen and (max-width: 768px) {
+            .game-grid {
+                grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+                gap: 10px;
+                padding: 10px;
+            }
+
+            .game-card {
+                width: 100%;
+                margin-bottom: 10px;
+            }
+
+            .game-image-container {
+                height: 150px;
+            }
+
+            .game-title {
+                font-size: 14px;
+            }
+
+            .game-category {
+                font-size: 12px;
+            }
+
+            .category-buttons {
+                padding: 0 10px;
+                margin-bottom: 10px;
+            }
+
+            .category-btn {
+                padding: 6px 15px;
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -765,20 +801,16 @@
     </footer>
 
     <script>
-        // 检查是否为移动设备
-        function isMobile() {
-            return window.innerWidth <= 768;
-        }
+        // 当前选中的分类
+        let currentCategory = 'all';
 
         // 从localStorage加载游戏数据
         function loadGames() {
             const games = JSON.parse(localStorage.getItem('games')) || [];
-            const gameContainers = document.querySelectorAll('.game-grid');
+            const gameContainer = document.querySelector('.game-grid');
             
-            // 清空所有游戏容器
-            gameContainers.forEach(container => {
-                container.innerHTML = '';
-            });
+            // 清空现有内容
+            gameContainer.innerHTML = '';
 
             // 根据当前选中的分类过滤游戏
             const filteredGames = games.filter(game => {
@@ -792,43 +824,29 @@
                 return false;
             });
 
-            // 为每个游戏容器添加游戏卡片
-            gameContainers.forEach(container => {
+            // 确保游戏数据已加载
+            console.log('Filtered games:', filteredGames);
+
+            // 显示过滤后的游戏
+            if (filteredGames.length > 0) {
                 filteredGames.forEach(game => {
-                    const gameCard = `
-                        <a href="${game.url}" class="game-card" target="_blank">
-                            <div class="game-image-container">
-                                <img src="${game.image}" alt="${game.title}" class="game-image">
-                            </div>
-                            <div class="game-info">
-                                <h3 class="game-title">${game.title}</h3>
-                                <p class="game-category">${game.keywords}</p>
-                            </div>
-                        </a>
+                    const gameCard = document.createElement('a');
+                    gameCard.href = game.url;
+                    gameCard.className = 'game-card';
+                    gameCard.target = '_blank';
+                    gameCard.innerHTML = `
+                        <div class="game-image-container">
+                            <img src="${game.image}" alt="${game.title}" class="game-image" loading="lazy">
+                        </div>
+                        <div class="game-info">
+                            <h3 class="game-title">${game.title}</h3>
+                            <p class="game-category">${game.keywords}</p>
+                        </div>
                     `;
-                    container.innerHTML += gameCard;
+                    gameContainer.appendChild(gameCard);
                 });
-            });
-
-            // 更新移动端的游戏显示
-            updateMobileView();
-        }
-
-        // 更新移动端视图
-        function updateMobileView() {
-            if (isMobile()) {
-                const gameContainers = document.querySelectorAll('.game-grid');
-                const firstContainer = gameContainers[0];
-                
-                // 确保其他容器的内容与第一个容器相同
-                if (firstContainer) {
-                    const content = firstContainer.innerHTML;
-                    gameContainers.forEach((container, index) => {
-                        if (index > 0) {
-                            container.innerHTML = content;
-                        }
-                    });
-                }
+            } else {
+                gameContainer.innerHTML = '<div class="no-games">暂无游戏</div>';
             }
         }
 
@@ -861,16 +879,6 @@
             document.querySelector('.mobile-menu').classList.remove('active');
         }
 
-        // 监听窗口大小变化
-        window.addEventListener('resize', updateMobileView);
-
-        // 页面加载时初始化数据
-        window.addEventListener('load', () => {
-            // 默认显示全部游戏
-            switchCategory('all');
-            loadAds();
-        });
-
         // 从localStorage加载广告数据
         function loadAds() {
             const ads = JSON.parse(localStorage.getItem('ads')) || { top: '', bottom: '' };
@@ -884,6 +892,81 @@
                 bottomAdSection.innerHTML = ads.bottom;
             }
         }
+
+        // 监听 localStorage 变化
+        window.addEventListener('storage', function(e) {
+            if (e.key === 'games') {
+                loadGames();
+            }
+        });
+
+        // 页面加载时初始化数据
+        window.addEventListener('load', () => {
+            // 默认显示全部游戏
+            switchCategory('all');
+            loadAds();
+        });
+
+        // 添加移动端菜单切换功能
+        document.querySelector('.mobile-menu-btn').addEventListener('click', function() {
+            document.querySelector('.mobile-menu').classList.toggle('active');
+        });
+
+        // Sample game data
+        const gamesData = {
+            popular: [
+                { title: "Rise Up", category: "Action", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "2048", category: "Puzzle", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Snake", category: "Arcade", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Tetris", category: "Puzzle", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Pacman", category: "Arcade", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Minecraft", category: "Adventure", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Angry Birds", category: "Action", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Candy Crush", category: "Puzzle", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Subway Surfers", category: "Action", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Fruit Ninja", category: "Action", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Crossy Road", category: "Arcade", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Temple Run", category: "Action", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Cut the Rope", category: "Puzzle", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Plants vs Zombies", category: "Strategy", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Bejeweled", category: "Puzzle", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Monster Truck", category: "Racing", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Bubble Shooter", category: "Puzzle", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Zombie Defense", category: "Strategy", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Car Racing", category: "Racing", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Word Search", category: "Puzzle", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Space Shooter", category: "Action", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Math Blaster", category: "Educational", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Chess", category: "Strategy", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "Checkers", category: "Strategy", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" }
+            ],
+            new: [
+                { title: "New Game 1", category: "Action", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 2", category: "Puzzle", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 3", category: "Arcade", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 4", category: "Strategy", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 5", category: "Racing", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 6", category: "Educational", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 7", category: "Action", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 8", category: "Puzzle", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 9", category: "Arcade", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 10", category: "Strategy", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 11", category: "Racing", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 12", category: "Educational", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 13", category: "Action", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 14", category: "Puzzle", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 15", category: "Arcade", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 16", category: "Strategy", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 17", category: "Racing", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 18", category: "Educational", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 19", category: "Action", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 20", category: "Puzzle", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 21", category: "Arcade", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 22", category: "Strategy", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 23", category: "Racing", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" },
+                { title: "New Game 24", category: "Educational", image: "https://img.freepik.com/free-vector/neon-style-coming-soon-glowing-background-design_1017-25516.jpg" }
+            ]
+        };
 
         // Language translations
         const translations = {
