--- a/admin.html
+++ b/admin.html
@@ -255,7 +255,7 @@
         const ADMIN_PASSWORD = 'admin123';
 
         // GitHub 配置
-        const GITHUB_REPO = 'psqhb888/gamehaven.vip'; // 你的仓库名
+        const GITHUB_REPO = 'psqhb888/-gamehaven.vip'; // 你的仓库名
         const GITHUB_API_URL = `https://api.github.com/repos/${GITHUB_REPO}/issues`;
 
         function getGitHubToken() {
