--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
     <script>
         // GitHub 配置
         const GITHUB_TOKEN = localStorage.getItem('GITHUB_TOKEN') || ''; // 从 localStorage 获取 token
-        const GITHUB_REPO = 'psqhb888/gamehaven.vip'; // 你的仓库名
+        const GITHUB_REPO = 'psqhb888/-gamehaven.vip'; // 你的仓库名
         const GITHUB_API_URL = `https://api.github.com/repos/${GITHUB_REPO}/issues`;
 
         // 检查是否设置了 token
