--- a/index.html
+++ b/index.html
@@ -694,8 +694,8 @@
             <div class="header-left">
                 <a href="/" class="logo">GameHub</a>
                 <nav class="nav-menu">
-                    <a href="#popular-games">Popular Games</a>
-                    <a href="#new-games">New Games</a>
+                    <a href="remen.html">Popular Games</a>
+                    <a href="zuixin.html">New Games</a>
                 </nav>
             </div>
             <div class="language-switch">
@@ -721,8 +721,8 @@
     </div>
 
     <div class="mobile-menu">
-        <a href="#popular-games">Popular Games</a>
-        <a href="#new-games">New Games</a>
+        <a href="remen.html">Popular Games</a>
+        <a href="zuixin.html">New Games</a>
     </div>
 
 
@@ -731,7 +731,7 @@
         <section class="section" id="popular-games">
             <div class="section-header">
                 <h2 class="section-title">Popular Games</h2>
-                <a href="#popular-games" class="more-btn">More Games</a>
+                <a href="remen.html" class="more-btn">More Games</a>
             </div>
             <div class="game-grid">
                 <!-- Game Cards will be dynamically added here -->
@@ -742,7 +742,7 @@
         <section class="section" id="new-games">
             <div class="section-header">
                 <h2 class="section-title">New Games</h2>
-                <a href="#new-games" class="more-btn">More Games</a>
+                <a href="zuixin.html" class="more-btn">More Games</a>
             </div>
             <div class="game-grid">
                 <!-- Game Cards will be dynamically added here -->
