--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
             <div class="header-left">
                 <a href="/" class="logo">GameHub</a>
                 <nav class="nav-menu">
-                    <a href="#popular-games">Popular Games</a>
+                    <a href="/remen.html">Popular Games</a>
                     <a href="#new-games">New Games</a>
                 </nav>
             </div>
@@ -713,7 +713,7 @@
             <span class="ad-label">Sponsored</span>
             <div class="ad-text">体验最刺激的动作游戏，立即开始冒险！</div>
         </a>
-        <a href="https://snooker.pics/" class="top-ad-box" target="_blank">
+        <a href="/" class="top-ad-box" target="_blank">
             <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420?w=800&auto=format&fit=crop&q=60" alt="Game Advertisement 2">
             <span class="ad-label">Sponsored</span>
             <div class="ad-text">挑战你的智力，解开所有谜题！</div>
