--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                 <a href="/" class="logo">GameHub</a>
                 <nav class="nav-menu">
                     <a href="/remen.html">Popular Games</a>
-                    <a href="#new-games">New Games</a>
+                    <a href="/zuixin.html">New Games</a>
                 </nav>
             </div>
             <div class="language-switch">
@@ -722,7 +722,7 @@
 
     <div class="mobile-menu">
         <a href="#popular-games">Popular Games</a>
-        <a href="#new-games">New Games</a>
+        <a href="/zuixin.html">New Games</a>
     </div>
 
 
@@ -731,7 +731,7 @@
         <section class="section" id="popular-games">
             <div class="section-header">
                 <h2 class="section-title">Popular Games</h2>
-                <a href="#popular-games" class="more-btn">More Games</a>
+                <a href="/remen.html" class="more-btn">More Games</a>
             </div>
             <div class="game-grid">
                 <a href="/1.html" class="game-card" target="_blank">
