--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
         <section class="section" id="new-games">
             <div class="section-header">
                 <h2 class="section-title">New Games</h2>
-                <a href="#new-games" class="more-btn">More Games</a>
+                <a href="/zuixin.html" class="more-btn">More Games</a>
             </div>
             <div class="game-grid">
                 <!-- Game Cards will be dynamically added here -->
