--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
 
                 <a href="/6.html" class="game-card" target="_blank">
                     <div class="game-image-container">
-                        <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/ColorFill3DTeaser.jpg" alt="Color Fill 3D" class="game-image">
+                        <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/ColorFill3dTeaser" alt="Color Fill 3D" class="game-image">
                     </div>
                     <div class="game-info">
                         <h3 class="game-title">Color Fill 3D</h3>
@@ -806,7 +806,7 @@
 
                 <a href="/8.html" class="game-card" target="_blank">
                     <div class="game-image-container">
-                        <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/ColorRoll3DTeaser.jpg" alt="Color Roll 3D" class="game-image">
+                        <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/SpotTheCatTeaser.jpg?v=0.2-e9a56fac" alt="Color Roll 3D" class="game-image">
                     </div>
                     <div class="game-info">
                         <h3 class="game-title">Color Roll 3D</h3>
@@ -816,7 +816,7 @@
 
                 <a href="/9.html" class="game-card" target="_blank">
                     <div class="game-image-container">
-                        <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/ColorWaterSort3DTeaser.jpg" alt="Color Water Sort 3D" class="game-image">
+                        <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/SpotTheCatTeaser.jpg?v=0.2-e9a56fac" alt="Color Water Sort 3D" class="game-image">
                     </div>
                     <div class="game-info">
                         <h3 class="game-title">Color Water Sort 3D</h3>
@@ -1039,16 +1039,16 @@
                 { title: "Butterfly Shimai", category: "Casual", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/ButterflyShimaiTeaser.jpg", link: "/68.html" },
                 { title: "E-Scooter", category: "Racing", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/EScooterTeaser.jpg", link: "/69.html" },
                 { title: "Pop It Duel", category: "Casual", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/PopItDuelTeaser.jpg", link: "/70.html" },
-                { title: "Stair Race 3D", category: "Action", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/StairRace3DTeaser.jpg", link: "/71.html" },
-                { title: "Crowd Run 3D", category: "Action", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/CrowdRun3DTeaser.jpg", link: "/72.html" },
+                { title: "Stair Race 3D", category: "Action", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/StairRace3dTeaser.jpg?v=0.2-e9a56fac", link: "/71.html" },
+                { title: "Crowd Run 3D", category: "Action", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/_CrowdRun3dTeaser.jpg?v=0.2-e9a56fac", link: "/72.html" },
                 { title: "Uncle Ahmed", category: "Adventure", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/UncleAhmedTeaser.jpg", link: "/73.html" },
-                { title: "Dices 2048 3D", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/Dices20483DTeaser.jpg", link: "/74.html" },
+                { title: "Dices 2048 3D", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/Dices20483dTeaser.jpg?v=0.2-e9a56fac", link: "/74.html" },
                 { title: "Frankenstein Go", category: "Adventure", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/FrankensteinGoTeaser.jpg", link: "/75.html" },
                 { title: "Om Nom Connect Classic", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/OmNomConnectClassicTeaser.jpg", link: "/76.html" },
                 { title: "Om Nom Bubbles", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/OmNomBubblesTeaser.jpg", link: "/77.html" },
-                { title: "Pop It 3D", category: "Casual", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/PopIt3DTeaser.jpg", link: "/78.html" },
+                { title: "Pop It 3D", category: "Casual", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/PopIt3dTeaser.jpg?v=0.2-e9a56fac", link: "/78.html" },
                 { title: "Traffic Tom", category: "Action", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/TrafficTomTeaser.jpg", link: "/79.html" },
-                { title: "Onet Gallery 3D", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/OnetGallery3DTeaser.jpg", link: "/80.html" },
+                { title: "Onet Gallery 3D", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/OnetGallery3dTeaser.jpg?v=0.2-e9a56fac", link: "/80.html" },
                 { title: "Om Nom Run", category: "Action", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/OmNomRunTeaser.jpg", link: "/81.html" },
                 { title: "Euro Penalty Cup 2021", category: "Sports", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/EuroPenaltyCup2021Teaser.jpg", link: "/82.html" },
                 { title: "Train 2048", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/Train2048Teaser.jpg", link: "/83.html" },
