--- a/index.html
+++ b/index.html
@@ -1008,10 +1008,10 @@
                 { title: "Giant Rush", category: "Action", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/GiantRushTeaser.jpg", link: "/3.html" },
                 { title: "Western Sniper", category: "Shooting", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/WesternSniperTeaser.jpg", link: "/4.html" },
                 { title: "Go Escape", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/GoEscapeTeaser.jpg", link: "/5.html" },
-                { title: "Color Fill 3D", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/ColorFill3DTeaser.jpg", link: "/6.html" },
+                { title: "Color Fill 3D", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/ColorFill3dTeaser.jpg?v=0.2-e9a56fac", link: "/6.html" },
                 { title: "Spot the Cat", category: "Observation", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/SpotTheCatTeaser.jpg", link: "/7.html" },
-                { title: "Color Roll 3D", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/ColorRoll3DTeaser.jpg", link: "/8.html" },
-                { title: "Color Water Sort 3D", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/ColorWaterSort3DTeaser.jpg", link: "/9.html" },
+                { title: "Color Roll 3D", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/SpotTheCatTeaser.jpg?v=0.2-e9a56fac", link: "/8.html" },
+                { title: "Color Water Sort 3D", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/NutRushTeaser.jpg?v=0.2-e9a56fac", link: "/9.html" },
                 { title: "Braindom", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/BraindomTeaser.jpg", link: "/10.html" },
                 { title: "Sort It", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/SortItTeaser.jpg", link: "/11.html" },
                 { title: "Cube Match", category: "Puzzle", image: "https://img.cdn.famobi.com/portal/html5games/images/tmp/CubeMatchTeaser.jpg", link: "/12.html" },
