--- a/remen.html
+++ b/remen.html
@@ -370,7 +370,7 @@
 
             <a href="/6.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/ColorFill3DTeaser.jpg" alt="Color Fill 3D" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/ColorFill3dTeaser.jpg?v=0.2-e9a56fac" alt="Color Fill 3D" class="game-image">
                 </div>
                 <div class="game-info">
                     <h3 class="game-title">Color Fill 3D</h3>
@@ -390,21 +390,21 @@
 
             <a href="/8.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/ColorRoll3DTeaser.jpg" alt="Color Roll 3D" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/NutRush2Teaser.jpg?v=0.2-e9a56fac" alt="Nut Rush 2" class="game-image">
                 </div>
                 <div class="game-info">
-                    <h3 class="game-title">Color Roll 3D</h3>
-                    <p class="game-category">Puzzle</p>
+                    <h3 class="game-title">Nut Rush 2</h3>
+                    <p class="game-category">Action</p>
                 </div>
             </a>
 
             <a href="/9.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/ColorWaterSort3DTeaser.jpg" alt="Color Water Sort 3D" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/NutRushTeaser.jpg?v=0.2-e9a56fac" alt="Nut Rush" class="game-image">
                 </div>
                 <div class="game-info">
-                    <h3 class="game-title">Color Water Sort 3D</h3>
-                    <p class="game-category">Puzzle</p>
+                    <h3 class="game-title">Nut Rush</h3>
+                    <p class="game-category">Action</p>
                 </div>
             </a>
 
@@ -570,7 +570,7 @@
 
             <a href="/26.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/PairUp3DTeaser.jpg" alt="Pair Up 3D" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/PairUp3dTeaser.jpg?v=0.2-e9a56fac" alt="Pair Up 3D" class="game-image">
                 </div>
                 <div class="game-info">
                     <h3 class="game-title">Pair Up 3D</h3>
@@ -690,10 +690,10 @@
 
             <a href="/38.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/BarbaraKentTeaser.jpg" alt="Barbara Kent" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/BarbaraAndKentTeaser.jpg?v=0.2-e9a56fac" alt="Barbara And Kent" class="game-image">
                 </div>
                 <div class="game-info">
-                    <h3 class="game-title">Barbara Kent</h3>
+                    <h3 class="game-title">Barbara And Kent</h3>
                     <p class="game-category">Adventure</p>
                 </div>
             </a>
